fix avatar overlay position

--- a/src/client/less/Avatar.less
+++ b/src/client/less/Avatar.less
@@ -1,3 +1,5 @@
+@import (less) "variables.less";
+
 .avatar {
     margin: 5px;
 
@@ -26,6 +28,14 @@
                 top: 50%;
                 transform: translate(-50%, -50%);
             }
+        }
+
+        .overlayIcons {
+            line-height: initial;
+            position: absolute;
+            right: 0;
+            bottom: 0;
+            color: @warningColor;
         }
     }
 
