--- a/src/client/less/App.less
+++ b/src/client/less/App.less
@@ -31,6 +31,10 @@ body {
         .tippy-box {
             max-width: none !important;
 
+            &[data-theme="translucent"] {
+                box-shadow: 0 0 5px @black;
+            }
+
             .tooltip {
                 display: grid;
             }
@@ -39,8 +43,8 @@ body {
                 width: 200%;
                 background-color: @primaryColor;
 
-                &[data-state=hidden]{
-                    transform: scale(1) translate(-50%,-50%);
+                &[data-state="hidden"] {
+                    transform: scale(1) translate(-50%, -50%);
                     opacity: 1;
                 }
             }
