--- a/src/client/less/LabelSelector.less
+++ b/src/client/less/LabelSelector.less
@@ -9,6 +9,7 @@
         border-radius: 4px 4px 0 0;
         border: none;
         color: @white;
+        width: calc(100% - 17px);
 
         &::placeholder {
             color: @light;
