better indication of deleted items

--- a/src/client/less/Item.less
+++ b/src/client/less/Item.less
@@ -33,6 +33,18 @@
         }
     }
 
+    &.deleted {
+        .info {
+            .name {
+                color: @warningColor;
+
+                input {
+                    color: @warningColor;
+                }
+            }
+        }
+    }
+
     &:hover {
         background-color: var(--gray-color, @gray);
         opacity: 1 !important;
