--- a/src/client/less/RecipePlaces.less
+++ b/src/client/less/RecipePlaces.less
@@ -5,7 +5,7 @@
 .recipePlaces {
     display: inline-block;
     vertical-align: middle;
-    width: 30%;
+    width: 10%;
     min-width: calc(@size * 2);
     position: relative;
 
@@ -75,8 +75,8 @@
             height: 18px;
 
             position: absolute;
-            top: -8px;
             left: calc(@size - 12px);
+            margin-top: -50px;
 
             pointer-events: all;
 
