--- a/src/client/less/RecipeEditor.less
+++ b/src/client/less/RecipeEditor.less
@@ -67,5 +67,8 @@
 
     .description {
         display: block;
+        width: 100%;
+        box-sizing: border-box;
+        padding: 5px;
     }
 }
