autopopulate and add edit button

--- a/src/client/less/RecipePlaces.less
+++ b/src/client/less/RecipePlaces.less
@@ -107,6 +107,7 @@
             width: max-content;
             right: calc(100% - 0.5em);
             margin-top: calc(@size * -0.5);
+            pointer-events: all;
 
             &::v-deep .item {
                 height: calc(@size * 0.5);
