make label selector to general item selector

--- a/src/client/less/ItemSelector.less
+++ b/src/client/less/ItemSelector.less
@@ -1,6 +1,6 @@
 @import (less) "variables";
 
-.labelSelector {
+.itemSelector {
     .search input {
         outline: none;
         user-select: none;
