--- a/src/client/less/common.less
+++ b/src/client/less/common.less
@@ -1,7 +1,7 @@
 @import (less) "variables";
 
-.toasted-container.top-right {
-    top: 20px !important;
+.toasted-container.bottom-right {
+    bottom: 20px !important;
     right: 20px !important;
     font-size: 16px !important;
     font-family: Avenir, Helvetica, Arial, sans-serif !important;
