show loading state when model is active in editing

--- a/src/client/less/Item.less
+++ b/src/client/less/Item.less
@@ -68,6 +68,10 @@
             background-color: var(--info-color, @infoColor) !important;
         }
 
+        &::v-deep .progressBar .bar {
+            background-color: @successColor;
+        }
+
         .subObjects {
             .item {
                 &:hover {
