--- a/src/client/less/LessonEditor.less
+++ b/src/client/less/LessonEditor.less
@@ -24,6 +24,13 @@
             outline: none;
         }
 
+        .calcRecipesButton {
+            transform: scale(0.75);
+            display: inline-block;
+            margin-bottom: -20px;
+            padding-right: 15px;
+        }
+
         .itemList {
             padding-left: 5px;
 
@@ -66,6 +73,37 @@
                     right: 0;
                     background-color: var(--white-color, fade(@white, 75));
                 }
+            }
+        }
+
+        .recipeList {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+
+            .recipeViewer {
+                box-sizing: border-box;
+                margin: 1em;
+                padding: 1em;
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 1700px) {
+    .lessonEditor {
+        .editorBody {
+            .recipeList {
+                grid-template-columns: repeat(2, 1fr);
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 1366px) {
+    .lessonEditor {
+        .editorBody {
+            .recipeList {
+                grid-template-columns: repeat(1, 1fr);
             }
         }
     }
