--- a/src/client/less/LessonsList.less
+++ b/src/client/less/LessonsList.less
@@ -9,14 +9,14 @@
     }
 }
 
-@media only screen and (max-width: 1366px) {
+@media only screen and (max-width: 1700px) {
     .lessonsList {
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(2, 1fr) !important;
     }
 }
 
 @media only screen and (max-width: 700px) {
     .lessonsList {
-        grid-template-columns: repeat(1, 1fr);
+        grid-template-columns: repeat(1, 1fr) !important;
     }
 }
