--- a/src/client/less/LessonEditor.less
+++ b/src/client/less/LessonEditor.less
@@ -5,6 +5,7 @@
 
     .editorBody {
         height: calc(100% - 50px);
+        overflow: auto;
 
         h3 {
             font-size: 16px;
@@ -42,6 +43,7 @@
                 width: calc(20% - 10px);
                 min-width: 150px;
                 max-width: 250px;
+                box-shadow: 0 0 5px @dusk;
 
                 &.leftDropTarget {
                     border-left: 2px solid var(--primary-color, @primaryColor);
@@ -63,6 +65,7 @@
                         color: var(--primary-color, @primaryColor);
                     }
                 }
+
                 .name {
                     position: absolute;
                     box-sizing: border-box;
@@ -79,11 +82,54 @@
         .recipeList {
             display: grid;
             grid-template-columns: repeat(3, 1fr);
+            padding-left: 5px;
 
             .recipeViewer {
+                position: relative;
                 box-sizing: border-box;
-                margin: 1em;
+                border: 1px solid @black;
+                background-color: @white;
+                box-shadow: 0 0 5px @dusk;
+                margin: 5px;
                 padding: 1em;
+                padding-bottom: calc(1em + 25px);
+                cursor: grab;
+
+                &.leftDropTarget {
+                    border-left: 2px solid var(--primary-color, @primaryColor);
+                }
+
+                &.rightDropTarget {
+                    border-right: 2px solid var(--primary-color, @primaryColor);
+                }
+
+                .closeIcon {
+                    position: absolute;
+                    top: 0;
+                    right: 0;
+                    font-size: 20px;
+                    font-weight: bold;
+                    cursor: pointer;
+                    pointer-events: all;
+
+                    &:hover {
+                        color: var(--primary-color, @primaryColor);
+                    }
+                }
+
+                .name {
+                    position: absolute;
+                    left: 0;
+                    right: 0;
+                    bottom: 0;
+                    text-align: center;
+                    font-weight: bold;
+                    padding: 5px;
+                }
+
+                &::v-deep * {
+                    pointer-events: none;
+                }
             }
         }
     }
