--- a/src/client/less/LessonOverwrites.less
+++ b/src/client/less/LessonOverwrites.less
@@ -14,6 +14,10 @@
     div {
         padding: 5px;
     }
+    input {
+        width: 100%;
+        box-sizing: border-box;
+    }
 
     .title {
         font-weight: bold;
