--- a/src/client/less/LessonEditor.less
+++ b/src/client/less/LessonEditor.less
@@ -25,6 +25,10 @@
             outline: none;
         }
 
+        .selected {
+            border: 1px solid @primaryColor !important;
+        }
+
         .calcRecipesButton {
             transform: scale(0.75);
             display: inline-block;
@@ -46,11 +50,11 @@
                 box-shadow: 0 0 5px @dusk;
 
                 &.leftDropTarget {
-                    border-left: 2px solid var(--primary-color, @primaryColor);
+                    border-left: 2px solid var(--primary-color, @primaryColor) !important;
                 }
 
                 &.rightDropTarget {
-                    border-right: 2px solid var(--primary-color, @primaryColor);
+                    border-right: 2px solid var(--primary-color, @primaryColor) !important;
                 }
 
                 .closeIcon {
@@ -96,11 +100,11 @@
                 cursor: grab;
 
                 &.leftDropTarget {
-                    border-left: 2px solid var(--primary-color, @primaryColor);
+                    border-left: 2px solid var(--primary-color, @primaryColor) !important;
                 }
 
                 &.rightDropTarget {
-                    border-right: 2px solid var(--primary-color, @primaryColor);
+                    border-right: 2px solid var(--primary-color, @primaryColor) !important;
                 }
 
                 .closeIcon {
