--- a/src/client/less/Item.less
+++ b/src/client/less/Item.less
@@ -167,6 +167,10 @@
             }
         }
 
+        .parentName {
+            font-weight: normal;
+        }
+
         .action {
             --button-height: 25px;
             --hover-color: none;
