harmonize remove icon

--- a/src/client/less/RecipePlace.less
+++ b/src/client/less/RecipePlace.less
@@ -63,6 +63,10 @@
 
         pointer-events: all;
 
+        svg {
+            top: 1px;
+        }
+
         &:hover {
             background-color: @primaryColor;
             cursor: pointer;
