uniform boxes in lesson editor

--- a/src/client/less/LessonEditor.less
+++ b/src/client/less/LessonEditor.less
@@ -48,6 +48,8 @@
                 min-width: 150px;
                 max-width: 250px;
                 box-shadow: 0 0 5px @dusk;
+                border: 1px solid @black;
+                box-sizing: border-box;
 
                 &.leftDropTarget {
                     border-left: 2px solid var(--primary-color, @primaryColor) !important;
