--- a/src/client/less/RecipePlaces.less
+++ b/src/client/less/RecipePlaces.less
@@ -51,6 +51,7 @@
         background-position: center center;
         background-repeat: no-repeat;
         background-size: contain;
+        cursor: pointer;
 
         .amount {
             position: absolute;
