--- a/src/client/less/LessonEditor.less
+++ b/src/client/less/LessonEditor.less
@@ -36,6 +36,10 @@
             padding-right: 15px;
         }
 
+        h3 .points {
+            font-size: 12px;
+        }
+
         .itemList {
             padding-left: 5px;
 
