--- a/src/client/less/Player.less
+++ b/src/client/less/Player.less
@@ -19,21 +19,6 @@
     }
 
     .grabbing {
-        transform: unset;
-        overflow: auto;
-        height: max-content;
-        max-width: 200px;
-        border: none;
-
-        &::v-deep .slot {
-            --slot-height: 20px;
-
-            .amount {
-                height: 10px;
-                width: 10px;
-                font-size: 8px;
-                line-height: 10px;
-            }
-        }
+        bottom: 65px;
     }
 }
