--- a/src/client/less/Admin.less
+++ b/src/client/less/Admin.less
@@ -54,20 +54,13 @@
         overflow: hidden;
 
         header {
-            display: grid;
-            grid-template-columns: 250px 1fr;
-            grid-template-rows: 1fr 1fr 1fr;
-            grid-template-areas:
-                "headline ."
-                "headline buttons"
-                "headline .";
-            white-space: nowrap;
+            display: flex;
+            justify-content: space-between;
             height: 50px;
 
             h2 {
                 grid-area: headline;
                 box-sizing: border-box;
-                width: calc(100% - 60px);
                 font-size: 18px;
             }
             .buttons {
@@ -76,6 +69,7 @@
                 text-align: right;
 
                 .collapseButton,
+                .collapseAllButton,
                 .addButton {
                     float: right;
                     --button-width: 49px;
