--- a/src/client/less/Tablet.less
+++ b/src/client/less/Tablet.less
@@ -16,8 +16,8 @@
 }
 
 .device {
-    height: 80vh;
-    width: 55vh;
+    height: 95vh;
+    width: 70vh;
     border-radius: 5px;
     background-color: @black;
     box-shadow: 0 0 5px @dusk;
@@ -70,6 +70,12 @@
             font-weight: normal;
             box-sizing: border-box;
             padding: 10px;
+
+            .fileFrame {
+                margin: -10px;
+                height: calc(100% + 20px);
+                width: calc(100% + 20px);
+            }
         }
     }
 
