--- a/src/client/less/Tablet.less
+++ b/src/client/less/Tablet.less
@@ -18,6 +18,7 @@
 .device {
     height: 95vh;
     width: 70vh;
+    max-width: calc(95vw - 70px);
     border-radius: 5px;
     background-color: @black;
     box-shadow: 0 0 5px @dusk;
