--- a/src/client/less/LessonEditor.less
+++ b/src/client/less/LessonEditor.less
@@ -44,6 +44,7 @@
             display: flex;
             padding-left: 5px;
             flex-wrap: wrap;
+            align-items: flex-start;
 
             .entityItem,
             .addEntity {
