--- a/src/client/less/ItemSelector.less
+++ b/src/client/less/ItemSelector.less
@@ -24,4 +24,22 @@
             color: @black;
         }
     }
+
+    .items {
+        max-height: 90vh;
+        max-width: 90vw;
+        overflow: auto;
+
+        &::-webkit-scrollbar {
+            width: 0.35em;
+        }
+
+        &::-webkit-scrollbar-track {
+            box-shadow: inset 0 0 6px var(--dark-color, @dark);
+        }
+
+        &::-webkit-scrollbar-thumb {
+            background-color: var(--gray-color, @gray);
+        }
+    }
 }
