add abstract and missing translations

--- a/src/client/less/LessonEditor.less
+++ b/src/client/less/LessonEditor.less
@@ -252,6 +252,23 @@
                 }
             }
         }
+
+        .abstract {
+            padding-left: 5px;
+
+            div {
+                display: flex;
+
+                div {
+                    padding: 5px;
+
+                    &:first-child {
+                        min-width: 175px;
+                        font-weight: bold;
+                    }
+                }
+            }
+        }
     }
 }
 
