add variables to speech bubbles

--- a/src/client/less/SpeechBubble.less
+++ b/src/client/less/SpeechBubble.less
@@ -12,6 +12,11 @@
     div {
         .speech {
             padding: 5px 10px 5px 0;
+
+            pre {
+                white-space: break-spaces;
+                margin: 0;
+            }
         }
         .closeButton,
         .button {
