add exit recipe to speech bubbles

--- a/src/client/less/SpeechBubbleEditor.less
+++ b/src/client/less/SpeechBubbleEditor.less
@@ -24,6 +24,11 @@
             padding: 10px 0;
         }
 
+        .highlighted {
+            background-color: @infoColor;
+            color: @white;
+        }
+
         .noRecipe {
             border: 2px dashed @black;
             text-align: center;
