add modified indicator

--- a/src/client/less/LessonEditor.less
+++ b/src/client/less/LessonEditor.less
@@ -41,6 +41,18 @@
             font-size: 12px;
         }
 
+        .modifiedIndicator {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            height: 20px;
+            width: 20px;
+            border-radius: 100%;
+            background-color: @warningColor;
+            box-shadow: 0 0 3px @black;
+            cursor: default;
+        }
+
         .entityList {
             display: flex;
             padding-left: 5px;
