put lesson overwrites popup into a tippy

--- a/src/client/less/Admin.less
+++ b/src/client/less/Admin.less
@@ -133,8 +133,7 @@
 
     .editor {
         grid-area: editor;
-        overflow-y: auto;
-        overflow-x: hidden;
+        overflow: hidden;
         position: relative;
     }
 }
