--- a/src/client/less/KnowledgeEditor.less
+++ b/src/client/less/KnowledgeEditor.less
@@ -2,6 +2,8 @@
     height: 100%;
 
     .editorBody {
-        margin: 0 10px;
+        padding: 0 10px;
+        height: calc(100% - 50px);
+        overflow-y: auto;
     }
 }
